# VaskeInformation

./: .gitignore  Cargo.toml  LICENSE  README.md  bot.py  build.nix  laundry.py  laundrytest.py  requirements.txt  shell.nix  test_laundry.py
.github/workflows/: pythonapp.yml
src/: laundry.rs  main.rs
