[package]
name = "vaske_information"
version = "0.1.0"
authors = ["René Løwe Jacobsen <rlj@rloewe.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
cookie_store = "0.13.3"
prettytable-rs = "0.8.0"
reqwest = { version = "0.11.2", features = ["cookies"] }
serde_json = "1.0.64"
serenity = "0.10.4"
soup = "0.5.1"
tokio = { version = "1.4.0", features = ["full"] }
